name:                Taiji-utils
version:             0.1.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2019 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Taiji.Types
                       Taiji.Utils
                       Taiji.Utils.Plot
                       Taiji.Utils.DataFrame
                       Taiji.Utils.Plot.ECharts
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-qq
                     , binary
                     , bio-pipelines
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.5.0
                     , bbi
                     , bytestring
                     , blaze-html
                     , conduit
                     , case-insensitive
                     , clustering
                     , deepseq
                     , data-default-class
                     , double-conversion
                     , hashable
                     , hvega
                     , matrices
                     , jmacro
                     , microlens
                     , text
                     , wl-pprint-text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-utils
