name:                Taiji-utils
version:             0.2.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2019-2020 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Taiji.Prelude
                       Taiji.Types
                       Taiji.Utils
                       Taiji.Utils.Clustering
                       Taiji.Utils.Matrix
                       Taiji.Utils.Plot
                       Taiji.Utils.DataFrame
                       Taiji.Utils.Plot.ECharts
                       Taiji.Utils.Plot.ECharts.Bar
                       Taiji.Utils.Plot.ECharts.Tree
                       Taiji.Utils.Plot.ECharts.Pie
                       Taiji.Utils.Plot.ECharts.Line
                       Taiji.Utils.Plot.ECharts.Types
                       Taiji.Utils.Plot.ECharts.Scatter
                       Taiji.Utils.Plot.ECharts.Heatmap
                       Taiji.Utils.Plot.ECharts.Boxplot
                       Taiji.Utils.Plot.ECharts.Radar
                       Taiji.Utils.Plot.ECharts.Graph
                       Taiji.Utils.Plot.ECharts.PunchChart
                       Taiji.Utils.Plot.Vega
                       Taiji.Utils.Plot.Vega.Heatmap
                       Taiji.Utils.Plot.Vega.Histogram
                       Taiji.Utils.Plot.Vega.Violin
                       Taiji.Utils.Plot.Vega.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bio-pipelines
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.5.0
                     , bbi
                     , bytestring
                     , vector-binary-instances
                     , bytestring-lexing
                     , blaze-html
                     , containers
                     , cereal
                     , conduit
                     , conduit-extra
                     , case-insensitive
                     , clustering
                     , deepseq
                     , data-default-class
                     , data-ordlist
                     , double-conversion
                     , hashable
                     , haskell-igraph
                     , matrices
                     , matrix-sized
                     , mwc-random
                     , jmacro
                     , microlens
                     , microlens-mtl
                     , mtl
                     , statistics
                     , shelly
                     , dense-linear-algebra
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-utils
